k8s-deployment/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prod-routes
  namespace: llmg
spec:
  parentRefs:
  - name: prod-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /sse
    timeouts:
      request: 0s
    backendRefs:
    - name: sse-malicious-app-svc
      port: 8080
      weight: 50
    - name: sse-safe-app-svc
      port: 8080
      weight: 50
  - matches:
    - path:
        type: PathPrefix
        value: /sse/malicious
    timeouts:
      request: 0s
    backendRefs:
    - name: sse-malicious-app-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /sse/safe
    timeouts:
      request: 0s
    backendRefs:
    - name: sse-safe-app-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /h2c
    backendRefs:
    - name: h2c-app-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /h2cll
    timeouts:
      request: 0s
    backendRefs:
    - name: h2cll-malicious-app-svc
      port: 8080
      weight: 50
    - name: h2cll-safe-app-svc
      port: 8080
      weight: 50
  - matches:
    - path:
        type: PathPrefix
        value: /h2cll/malicious
    timeouts:
      request: 0s
    backendRefs:
    - name: h2cll-malicious-app-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /h2cll/safe
    timeouts:
      request: 0s
    backendRefs:
    - name: h2cll-safe-app-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-svc
      port: 80
